...
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/add_schedule_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:hint="@string/title_hint"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
...
        android:id="@+id/add_schedule_duration"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"></Spinner>

    <EditText
        android:id="@+id/add_schedule_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/description_hint" />

...
