<resources>
    <string name="app_name">Scheduler</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note">New Note</string>
    <string name="navigation_view_header_title">Notes</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your note here.</string>
    <string name="empty_note_message">Notes cannot be empty</string>
    <string name="successfully_saved_note_message">Note saved</string>
    <string name="cannot_connect_to_camera_message">Cannot connect to camera</string>
    <string name="take_picture">Add picture</string>
    <string name="take_picture_error">Could not take picture</string>
    <string name="statistics_title">Statistics</string>
    <string name="no_statistics_available">No statistics</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="schedule_types">
        <item>娛樂</item>
        <item>工作</item>
        <item>讀書</item>
        <item>樂器</item>
    </string-array>

    <string-array name="schedule_types_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="schedule_duration">
        <item>1hr</item>
        <item>2hr</item>
        <item>3hr</item>
        <item>4hr</item>
        <item>5hr</item>
        <item>6hr</item>
        <item>7hr</item>
        <item>8hr</item>
        <item>整天都做這個就飽了？</item>
    </string-array>

    <string-array name="schedule_duration_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>0</item>
    </string-array>

</resources>
